2013/10/18

- Start/Stop button no longer closes the properties dialog.


2013/10/17

- Added a new module taskw.py, which is a simple database parser.
- Current task duration is shown in the properties dialog.
- Sorting by urgency temporarily doesn't work.


Version 1.2

- Tasks tagged with "pin" are always show at the top of the indicator menu.


Version 1.1

- Tasks tagged as "endless" moved to the end of the indicator menu.