@@ -1,3 +1,4 @@
 - Move project names to the right column in the indicator menu, like the date time applet does for time zones.  How is this done?
+- Open as many task properties dialogs as necessary.
 
 Email suggestions to <hex@umonkey.net>, add "NoAgenda" to the subject line to avoid spam.
